--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "r3elements",
+  "name": "elements",
   "version": "1.0.1",
-  "main": "src/index.scss",
-  "author": "Reactive3 - Hussain and Rahul",
+  "main": "src/elements.css",
+  "author": "Hussain Sajib",
   "license": "MIT",
   "scripts": {
     "build": "rollup -c"
