--- a/packages/elegantcss/package.json
+++ b/packages/elegantcss/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elegantcss",
   "version": "0.0.1",
-  "main": "elegantcss.css",
+  "main": "elegant.css",
   "author": "Hussain Sajib",
   "license": "MIT",
   "scripts": {
@@ -11,6 +11,7 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
+    "clean-css": "^5.1.2",
     "rollup": "^2.41.4",
     "rollup-plugin-scss": "^2.6.1",
     "sass": "^1.32.8"
